force-app/main/default/objects/NotaFiscalItem__c/NotaFiscalItem__c.object-meta.xml
<CustomObject>
    <label>Nota Fiscal Item</label>
    <nameField>
        <displayFormat>NFT {0000000000}</displayFormat>
        <label>N° NF Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas Fiscais Itens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>