force-app/main/default/objects/NotaFiscalItem__c/fields/CodigoItemNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>CodigoItemNotaFiscal__c</fullName>
    <externalId>true</externalId>
    <label>Código Item Nota Fiscal</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>