force-app/main/default/objects/NotaFiscalItem__c/fields/NotaFiscalId__c.field-meta.xml
<CustomField>
    <fullName>NotaFiscalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nota Fiscal</label>
    <referenceTo>NotaFiscal__c</referenceTo>
    <relationshipLabel>Notas Fiscais Itens</relationshipLabel>
    <relationshipName>NotasFiscaisItens</relationshipName>
    <type>Lookup</type>
</CustomField>