force-app/main/default/objects/NotaFiscalItem__c/fields/PedidoId__c.field-meta.xml
<CustomField>
    <fullName>PedidoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Notas Fiscais Itens</relationshipLabel>
    <relationshipName>NotasFiscaisItens</relationshipName>
    <type>Lookup</type>
</CustomField>