force-app/main/default/objects/NotaFiscalItem__c/fields/PesoUnitario__c.field-meta.xml
<CustomField>
    <fullName>PesoUnitario__c</fullName>
    <label>Peso Unitário</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>