force-app/main/default/objects/NotaFiscalItem__c/fields/QuantidadeProduto__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeProduto__c</fullName>
    <label>Quantidade Produto</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>