force-app/main/default/objects/NotaFiscalItem__c/fields/SerieNotaFiscal__c.field-meta.xml
<CustomField>
    <fullName>SerieNotaFiscal__c</fullName>
    <label>Série Nota Fiscal</label>
    <length>3</length>
    <type>Text</type>
</CustomField>