force-app/main/default/objects/NotaFiscalItem__c/fields/UnidadeMedida__c.field-meta.xml
<CustomField>
    <fullName>UnidadeMedida__c</fullName>
    <formula>ProdutoId__r.CodigoUnidadeMedida__c</formula>
    <label>Unidade de Medida</label>
    <type>Text</type>
</CustomField>