force-app/main/default/objects/NotaFiscalItem__c/fields/ValorTotalBrutoItem__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalBrutoItem__c</fullName>
    <label>Valor Total Bruto Item</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>