force-app/main/default/objects/NotaFiscalItem__c/fields/ValorTotalICMSST__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalICMSST__c</fullName>
    <label>Valor Total ICMS ST</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>