force-app/main/default/objects/NotaFiscalItem__c/fields/ValorTotalIPI__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalIPI__c</fullName>
    <label>Valor Total IPI</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>