force-app/main/default/objects/NotaFiscalItem__c/fields/ValorUnitarioLiquido__c.field-meta.xml
<CustomField>
    <fullName>ValorUnitarioLiquido__c</fullName>
    <label>Valor Unitário Líquido</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>